--- a/home/wiki/App/UI/Night_mode.html
+++ b/home/wiki/App/UI/Night_mode.html
@@ -80,7 +80,7 @@
         <b>Main Menu</b>: Choose <code>View</code> -&gt; <code>Toggle Night mode</code>
       </li>
       <li>
-        <b>Options</b>: Go to <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.nightmode.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.gui.nightmode" class="xowa-visited">Special:XowaCfg?grp=xowa.gui.nightmode</a> and check <code>Enabled</code>
+        <b>Options</b>: Go to <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.nightmode.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.gui.nightmode">Special:XowaCfg?grp=xowa.gui.nightmode</a> and check <code>Enabled</code>
       </li>
     </ul>
     <h2>
@@ -136,7 +136,7 @@
       </li>
     </ul>
     <p>
-      By default, a simple white on black theme is chosen. Exact colors can be chosen through <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.nightmode.html" id="xolnki_3" title="Special:XowaCfg?grp=xowa.gui.nightmode" class="xowa-visited">Special:XowaCfg?grp=xowa.gui.nightmode</a>.
+      By default, a simple white on black theme is chosen. Exact colors can be chosen through <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.nightmode.html" id="xolnki_3" title="Special:XowaCfg?grp=xowa.gui.nightmode">Special:XowaCfg?grp=xowa.gui.nightmode</a>.
     </p>
     <h3>
       <span class="mw-headline" id="CSS">CSS</span>
