--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -728,7 +728,7 @@
     </p>
     <ul>
       <li>
-        Wikidata: Handle new Wikidata JSON schema in 2014-09-12 dump (affects any page using {{#property}}). See: <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_8" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a> <a href="https://simple.wikipedia.org/wiki/Google" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Google</a> <a href="https://hu.wikipedia.org/wiki/Piszkos_Harry" rel="nofollow" class="external free">https://hu.wikipedia.org/wiki/Piszkos_Harry</a> <a href="https://pl.wikipedia.org/wiki/Województwo_małopolskie" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Województwo_małopolskie</a> <a href="https://en.wikipedia.org/wiki/Alberta" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alberta</a> <a href="https://it.wikipedia.org/wiki/Torino" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Torino</a> <a href="https://en.wikipedia.org/wiki/'s-Graveland" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/'s-Graveland</a>
+        Wikidata: Handle new Wikidata JSON schema in 2014-09-12 dump (affects any page using {{#property}}). See: <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_8" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a> <a href="https://simple.wikipedia.org/wiki/Google" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Google</a> <a href="https://hu.wikipedia.org/wiki/Piszkos_Harry" rel="nofollow" class="external free">https://hu.wikipedia.org/wiki/Piszkos_Harry</a> <a href="https://pl.wikipedia.org/wiki/Województwo_małopolskie" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Województwo_małopolskie</a> <a href="https://en.wikipedia.org/wiki/Alberta" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alberta</a> <a href="https://it.wikipedia.org/wiki/Torino" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Torino</a> <a href="https://en.wikipedia.org/wiki/'s-Graveland" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/'s-Graveland</a>
       </li>
       <li>
         Scribunto: Add Frame Title for ExpandTemplate (affects script error on any page with an italicized page title). See: <a href="https://en.wikipedia.org/wiki/A_Modest_Proposal" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/A_Modest_Proposal</a> <a href="https://en.wikipedia.org/wiki/The_World_Factbook" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/The_World_Factbook</a> <a href="https://en.wikipedia.org/wiki/Citizen_Kane" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Citizen_Kane</a>
@@ -1341,7 +1341,7 @@
         Module.Popups: Do not omit namespace for anchor popups (affects popups showing text from wrong page when link was to non-mainspace page). See: <a href="https://en.wikipedia.org/wiki/Project:Sandbox" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Project:Sandbox</a>
       </li>
       <li>
-        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About" class="xowa-visited">Help/About</a>
+        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About">Help/About</a>
       </li>
       <li>
         Html: Show caption text in title (affects tooltips missing caption text); EX:"a [[b]]" -&gt; title="a b" x&gt; "a ". See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
@@ -2727,7 +2727,7 @@
     </p>
     <ul>
       <li>
-        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About" class="xowa-visited">Help/About</a>
+        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About">Help/About</a>
       </li>
     </ul>
     <p>
@@ -2945,7 +2945,7 @@
         Parser.Toc: Parse link inside xml node (affects page not loading); EX:== &lt;i&gt;[[A]]&lt;/i&gt; ==. See: <a href="https://pl.wiktionary.org/wiki/head_sth_off" rel="nofollow" class="external free">https://pl.wiktionary.org/wiki/head_sth_off</a>
       </li>
       <li>
-        Math: Escape &lt;, &gt;, &amp;, and " {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Vergleich_(Zahlen)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vergleich_(Zahlen)</a> <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_74" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
+        Math: Escape &lt;, &gt;, &amp;, and " {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Vergleich_(Zahlen)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vergleich_(Zahlen)</a> <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_74" title="Diagnostics/Math">Diagnostics/Math</a>
       </li>
       <li>
         Wikisource.Page: Parse " in title (and other html numeric character references). See: <a href="https://pl.wikisource.org/wiki/Zarządzenie_Nr_11_Ministra_Finansów_z_dnia_21_lipca_2008_r._w_sprawie_ustanowienia_„Dnia_Skarbowości”" rel="nofollow" class="external free">https://pl.wikisource.org/wiki/Zarządzenie_Nr_11_Ministra_Finansów_z_dnia_21_lipca_2008_r._w_sprawie_ustanowienia_„Dnia_Skarbowości”</a>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
