--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -46,7 +46,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips">Diagnostics/Javascript/Reference_tooltips</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a> (currently via MathJax)
+            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math">Diagnostics/Math</a> (currently via MathJax)
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline.html" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
@@ -95,7 +95,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/LuaCommon.html" id="xolnki_18" title="Diagnostics/Scribunto/LuaCommon">Diagnostics/Scribunto/LuaCommon</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UstringLibrary.html" id="xolnki_19" title="Diagnostics/Scribunto/UstringLibrary" class="xowa-visited">Diagnostics/Scribunto/UstringLibrary</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UstringLibrary.html" id="xolnki_19" title="Diagnostics/Scribunto/UstringLibrary">Diagnostics/Scribunto/UstringLibrary</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UriLibrary.html" id="xolnki_20" title="Diagnostics/Scribunto/UriLibrary">Diagnostics/Scribunto/UriLibrary</a>
@@ -122,7 +122,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_27" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleBlacklist.html" id="xolnki_29" title="Diagnostics/Scribunto/TitleBlacklist">Diagnostics/Scribunto/TitleBlacklist</a>
@@ -135,7 +135,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_30" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_30" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a>
       </li>
     </ul>
     <h2>
