--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -184,7 +184,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_25" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_26" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_26" title="Dev/Command-line/Dumps">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_27" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -335,7 +335,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_53" title="Help/Release schedule" class="xowa-visited">Release schedule</a>
+              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_53" title="Help/Release schedule">Release schedule</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_54" title="Help/Roadmap">Roadmap</a>
