--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -74,21 +74,30 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v4.5.7.1706 features the following
+      v4.5.15.1709 features the following
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2017-05 English, German, and French wikis with full-text search. Also, 2017-06 English Wikipedia
+        (Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.
       </li>
       <li>
-        (PC) Fix parser issues including "mwInit.lua:24 bad argument" in English Wikipedia, broken navboxes in French Wikivoyage, "=Module:Header template:93" in French Wikisource, "gplx.Err: bad argument" in French Wikiversity, and missing Table of Contents on some German Wikipedia pages.
+        (PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia
+      </li>
+      <li>
+        (PC) Fix online import not working on Mac OS X
+      </li>
+      <li>
+        (PC) Fix full-text search on http_server
+      </li>
+      <li>
+        (PC) Add customizable footer
       </li>
     </ul>
     <p>
       For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
-      For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule" class="xowa-visited">the release schedule</a>.
+      For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
     </p>
     <h2>
       <span class="mw-headline" id="New_users">New users</span>
@@ -137,7 +146,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -169,7 +178,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -233,7 +242,7 @@
         v4.5.0 features full-text search for all wikis. See <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_16" title="App/Full-text search">App/Full-text_search</a>
       </li>
       <li>
-        v4.4.0 features night-mode. See <a href="http://xowa.org/home/wiki/App/UI/Night_mode.html" id="xolnki_17" title="App/UI/Night mode" class="xowa-visited">App/UI/Night_mode</a>
+        v4.4.0 features night-mode. See <a href="http://xowa.org/home/wiki/App/UI/Night_mode.html" id="xolnki_17" title="App/UI/Night mode">App/UI/Night_mode</a>
       </li>
       <li>
         v4.2.0 features personal wiki support. See <a href="http://xowa.org/home/wiki/App/Personal_wikis.html" id="xolnki_18" title="App/Personal wikis">App/Personal_wikis</a>
@@ -270,7 +279,7 @@
         v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_25" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_26" title="App/UI/HTML Browser" class="xowa-visited">HTML Browser</a>
+        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_25" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_26" title="App/UI/HTML Browser">HTML Browser</a>
       </li>
       <li>
         v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_27" title="Blog">Blog</a><br>
@@ -373,7 +382,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -413,7 +422,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_44" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_44" title="Help/Contents">Contents</a>
         </td>
         <td>
           View all help topics
