--- a/home/wiki/Blog.html
+++ b/home/wiki/Blog.html
@@ -25,16 +25,22 @@
       </p>
       <ul>
         <li>
-          <b>2017-06</b>
+          <a href="http://xowa.org/home/wiki/Blog/2017-06.html" id="xolnki_2" title="Blog/2017-06" class="xowa-visited">2017-09</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-04.html" id="xolnki_3" title="Blog/2017-04" class="xowa-visited">2017-04</a>
+          <a href="http://xowa.org/home/wiki/Blog/2017-06.html" id="xolnki_3" title="Blog/2017-06" class="xowa-visited">2017-06</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-03.html" id="xolnki_4" title="Blog/2017-03">2017-03</a>
+          <a href="http://xowa.org/home/wiki/Blog/2017-04.html" id="xolnki_4" title="Blog/2017-04">2017-04</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-02.html" id="xolnki_5" title="Blog/2017-02">2017-02</a>
+          <a href="http://xowa.org/home/wiki/Blog/2017-03.html" id="xolnki_5" title="Blog/2017-03">2017-03</a>
+        </li>
+        <li>
+          <a href="http://xowa.org/home/wiki/Blog/2017-02.html" id="xolnki_6" title="Blog/2017-02">2017-02</a>
+        </li>
+        <li>
+          <a href="http://xowa.org/home/wiki/Blog/2017-01.html" id="xolnki_7" title="Blog/2017-01">2017-01</a>
         </li>
       </ul>
       <p>
@@ -42,29 +48,17 @@
       </p>
       <ul>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2017-01.html" id="xolnki_6" title="Blog/2017-01">2017-01</a>
+          <a href="http://xowa.org/home/wiki/Blog/2016-12.html" id="xolnki_8" title="Blog/2016-12">2016-12</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-12.html" id="xolnki_7" title="Blog/2016-12">2016-12</a>
+          <a href="http://xowa.org/home/wiki/Blog/2016-11.html" id="xolnki_9" title="Blog/2016-11">2016-11</a>
         </li>
         <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-11.html" id="xolnki_8" title="Blog/2016-11">2016-11</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-10.html" id="xolnki_9" title="Blog/2016-10">2016-10</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-09.html" id="xolnki_10" title="Blog/2016-09">2016-09</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-08.html" id="xolnki_11" title="Blog/2016-08">2016-08</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-07.html" id="xolnki_12" title="Blog/2016-07">2016-07</a>
+          <a href="http://xowa.org/home/wiki/Blog/2016-10.html" id="xolnki_10" title="Blog/2016-10">2016-10</a>
         </li>
       </ul>
       <p>
-        <a href="http://xowa.org/home/wiki/Blog/Archives.html" id="xolnki_13" title="Blog/Archives">Archives</a>
+        <a href="http://xowa.org/home/wiki/Blog/Archives.html" id="xolnki_11" title="Blog/Archives" class="xowa-visited">Archives</a>
       </p>
     </div>
     <div id="toc" class="toc">
@@ -75,81 +69,99 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#Release:_v4.5.2.1704_.282017-04-26_20:00_Wed.29"><span class="tocnumber">1</span> <span class="toctext">Release: v4.5.2.1704 (2017-04-26 20:00 Wed)</span></a> 
+          <a href="#Release:_v4.5.15.1709_.282017-09-17_21:00_Sun.29"><span class="tocnumber">1</span> <span class="toctext">Release: v4.5.15.1709 (2017-09-17 21:00 Sun)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#.28Wiki.29_Publish_2017-05_English.2C_German.2C_and_French_wikis_with_full-text_search._Also.2C_2017-06_English_Wikipedia"><span class="tocnumber">1.1</span> <span class="toctext">(Wiki) Publish 2017-05 English, German, and French wikis with full-text search. Also, 2017-06 English Wikipedia</span></a>
+              <a href="#.28Wiki.29_Publish_2017-08_Polish_wikis_and_2017-09_Spanish_wikis_with_full-text_search._Also.2C_2017-08.2C_2017-07_English_Wikipedia.2C_and_2017-07_German_Wikipedia."><span class="tocnumber">1.1</span> <span class="toctext">(Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.</span></a>
             </li>
             <li class="toclevel-2 tocsection-3">
-              <a href="#.28PC.29_Fix_parser_issues_including_including_.22mwInit.lua:24_bad_argument.22_in_English_Wikipedia.2C_broken_navboxes_in_French_Wikivoyage.2C_.22.3DModule:Header_template:93.22_in_French_Wikisource.2C_.22gplx.Err:_bad_argument.22_in_French_Wikiversity.2C_and_missing_Table_of_Contents_on_some_German_Wikipedia_pages."><span class="tocnumber">1.2</span> <span class="toctext">(PC) Fix parser issues including including "mwInit.lua:24 bad argument" in English Wikipedia, broken navboxes in French Wikivoyage, "=Module:Header template:93" in French Wikisource, "gplx.Err: bad argument" in French Wikiversity, and missing Table of Contents on some German Wikipedia pages.</span></a>
+              <a href="#.28PC.29_Fix_parser_issues_including_.22gplx.Err:_index_is_out_of_bounds.22_in_Spanish_Wikipedia_and_.22Module:Location_map:353_Malformed_coordinates_value.22_in_English_Wikipedia"><span class="tocnumber">1.2</span> <span class="toctext">(PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Next_release"><span class="tocnumber">1.3</span> <span class="toctext">Next release</span></a>
+              <a href="#.28PC.29_Fix_online_import_not_working_on_Mac_OS_X"><span class="tocnumber">1.3</span> <span class="toctext">(PC) Fix online import not working on Mac OS X</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#.28PC.29_Fix_full-text_search_on_http_server"><span class="tocnumber">1.4</span> <span class="toctext">(PC) Fix full-text search on http_server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#.28PC.29_Add_customizable_footer"><span class="tocnumber">1.5</span> <span class="toctext">(PC) Add customizable footer</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Next_release"><span class="tocnumber">1.6</span> <span class="toctext">Next release</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Release:_v4.5.2.1704_.282017-04-26_20:00_Wed.29">Release: v4.5.2.1704 (2017-04-26 20:00 Wed)</span>
+      <span class="mw-headline" id="Release:_v4.5.15.1709_.282017-09-17_21:00_Sun.29">Release: v4.5.15.1709 (2017-09-17 21:00 Sun)</span>
     </h2>
     <p>
-      The PC version is a minor release. It fixes parsing issues for English, German and French wikis.
+      The PC version is a minor release. It fixes parsing issues for Spanish wikis.
     </p>
     <p>
-      The Android version is a trivial release. It updates the list of Download Central wikis.
+      The PC version is a trivial release. It updates the list of wikis for Download Central.
     </p>
     <h3>
-      <span class="mw-headline" id=".28Wiki.29_Publish_2017-05_English.2C_German.2C_and_French_wikis_with_full-text_search._Also.2C_2017-06_English_Wikipedia">(Wiki) Publish 2017-05 English, German, and French wikis with full-text search. Also, 2017-06 English Wikipedia</span>
+      <span class="mw-headline" id=".28Wiki.29_Publish_2017-08_Polish_wikis_and_2017-09_Spanish_wikis_with_full-text_search._Also.2C_2017-08.2C_2017-07_English_Wikipedia.2C_and_2017-07_German_Wikipedia.">(Wiki) Publish 2017-08 Polish wikis and 2017-09 Spanish wikis with full-text search. Also, 2017-08, 2017-07 English Wikipedia, and 2017-07 German Wikipedia.</span>
     </h3>
     <p>
       These wikis have been published over the course of the past several weeks. You can get them from Download Central or see the following links:
     </p>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_14" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_12" title="Wiki setup/Polish wikis">Wiki_setup/Polish_wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_15" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_13" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_16" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_14" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_15" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </li>
     </ul>
-    <p>
-      Note that all wikis have full-text search capabilities. Feel free to give them a try!
-    </p>
     <h3>
-      <span class="mw-headline" id=".28PC.29_Fix_parser_issues_including_including_.22mwInit.lua:24_bad_argument.22_in_English_Wikipedia.2C_broken_navboxes_in_French_Wikivoyage.2C_.22.3DModule:Header_template:93.22_in_French_Wikisource.2C_.22gplx.Err:_bad_argument.22_in_French_Wikiversity.2C_and_missing_Table_of_Contents_on_some_German_Wikipedia_pages.">(PC) Fix parser issues including including "mwInit.lua:24 bad argument" in English Wikipedia, broken navboxes in French Wikivoyage, "=Module:Header template:93" in French Wikisource, "gplx.Err: bad argument" in French Wikiversity, and missing Table of Contents on some German Wikipedia pages.</span>
+      <span class="mw-headline" id=".28PC.29_Fix_parser_issues_including_.22gplx.Err:_index_is_out_of_bounds.22_in_Spanish_Wikipedia_and_.22Module:Location_map:353_Malformed_coordinates_value.22_in_English_Wikipedia">(PC) Fix parser issues including "gplx.Err: index is out of bounds" in Spanish Wikipedia and "Module:Location map:353 Malformed coordinates value" in English Wikipedia</span>
     </h3>
     <p>
-      There are a handful of significant parser issues fixed in this release. For more detail, see the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_17" title="Change log">Change log</a>. In brief:
+      There were two notable parser fixes:
     </p>
     <ul>
       <li>
-        2017-06 English Wikipedia no longer has script errors for "mwInit.lua:24 bad argument"
+        Several dozen film pages in Spanish Wikipedia would have a script error with "gplx.Err: index is out of bounds". This was due to some changes on the Wikimedia side to mw.lua
       </li>
       <li>
-        2017-05 French Wikivoyage no longer has broken navboxes
-      </li>
-      <li>
-        2017-05 French Wikisource no longer has script errors for "=Module:Header template:93"
-      </li>
-      <li>
-        2017-05 French Wikiversity no longer has script errors for "gplx.Err: bad argument"
-      </li>
-      <li>
-        2017-06 German Wikipedia no longer has missing Table of Contents
+        Several dozen geography pages in English Wikipedia would have a script error with Module:Location map:353 Malformed coordinates value. This was due to some faulty logic in XOWA which would still return back a value even when an index didn't exist (EX: {{#invoke:Mod|3=abc}}) and args[2] would return back args[3])
       </li>
     </ul>
     <p>
-      Note that these errors only affected between .1% and 2% of pages. However, since even .1% means something like 5,000 pages in English Wikipedia, they needed to be fixed.
+      Both of these are fixed in this release
+    </p>
+    <h3>
+      <span class="mw-headline" id=".28PC.29_Fix_online_import_not_working_on_Mac_OS_X">(PC) Fix online import not working on Mac OS X</span>
+    </h3>
+    <p>
+      This was reported separately by a user. It appears that sometime during the past few months, the online import failed for Mac OS X. This version fixes the error.
+    </p>
+    <h3>
+      <span class="mw-headline" id=".28PC.29_Fix_full-text_search_on_http_server">(PC) Fix full-text search on http_server</span>
+    </h3>
+    <p>
+      This was reported in <a href="https://github.com/gnosygnu/xowa/issues/151" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/151</a>
+    </p>
+    <h3>
+      <span class="mw-headline" id=".28PC.29_Add_customizable_footer">(PC) Add customizable footer</span>
+    </h3>
+    <p>
+      This was requested in order to more closely reproduce the look and feel of Wikipedia. The options can be set at <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.page.html" id="xolnki_16" title="Special:XowaCfg?grp=xowa.html.page">Special:XowaCfg?grp=xowa.html.page</a>
     </p>
     <h3>
       <span class="mw-headline" id="Next_release">Next release</span>
     </h3>
     <p>
-      I'm still working on releasing more wikis with full-text search indexes. At the moment, Polish, Spanish, and Russian are next.
+      I've been slow in uploading wikis. For now, I'm continuing on the same path with Russian as well as the monthly English Wikipedia updates.
     </p>
   
     </div>
