--- a/home/wiki/Change_log/v4.4.0.1703.html
+++ b/home/wiki/Change_log/v4.4.0.1703.html
@@ -66,7 +66,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaSearch.html" id="xolnki_4" title="Special:XowaSearch" class="xowa-visited">Special:XowaSearch</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaSearch.html" id="xolnki_4" title="Special:XowaSearch">Special:XowaSearch</a>
       </dd>
     </dl>
     <ul>
