--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -216,7 +216,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.setup.previous_version")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.10.1707">
+            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.15.1709">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.setup.previous_version__key_box' value='xowa.app.setup.previous_version'> <input type='hidden' id='xowa.app.setup.previous_version__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -342,8 +342,6 @@
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
-en.wikipedia.org/wiki/Earth
-home/wiki/Wiki_setup/English_wikis
 </textarea>
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
@@ -364,7 +362,7 @@ home/wiki/Wiki_setup/English_wikis
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="1">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="-1">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -407,7 +405,7 @@ home/wiki/Wiki_setup/English_wikis
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.toggles.wikidata-langs")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled" checked="checked">
+            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.html.toggles.wikidata-langs__key_box' value='xowa.html.toggles.wikidata-langs'> <input type='hidden' id='xowa.html.toggles.wikidata-langs__ctx_box' value='app'>
         </div><!-- DIV:help -->
