--- a/home/wiki/Options/Window.html
+++ b/home/wiki/Options/Window.html
@@ -242,6 +242,9 @@
               <option value="ast">
                 Asturianu [ast]
               </option>
+              <option value="atj">
+                Atikamekw [atj]
+              </option>
               <option value="av">
                 Авар [av]
               </option>
@@ -712,6 +715,9 @@
               </option>
               <option value="kbd-cyrl">
                 къэбэрдеибзэ [kbd-cyrl]
+              </option>
+              <option value="kbp">
+                Kabiye [kbp]
               </option>
               <option value="kg">
                 Kongo [kg]
@@ -1617,21 +1623,21 @@
         <div class="xocfg_row flex_div">
           <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
-            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.toolbar.show_search")' title='view more info'>&nbsp;</span>
+            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.browser.toolbar.show_search")' title='view more info'>&nbsp;</span>
           </div><!-- TEXT:key -->
-          <div id='xowa.gui.toolbar.show_search__name' class='xocfg_itm_name'>
+          <div id='xowa.gui.browser.toolbar.show_search__name' class='xocfg_itm_name'>
             Show search
           </div><!-- BTN:undo -->
-          <div id='xowa.gui.toolbar.show_search__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
-            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.toolbar.show_search")' title="reset to &quot;y&quot;">&nbsp;</span>
+          <div id='xowa.gui.browser.toolbar.show_search__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
+            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.browser.toolbar.show_search")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.gui.toolbar.show_search" data-xocfg-key="xowa.gui.toolbar.show_search" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
+            <input id="xowa.gui.browser.toolbar.show_search" data-xocfg-key="xowa.gui.browser.toolbar.show_search" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
           </div><!-- HIDDEN:key,ctx -->
-          <input type='hidden' id='xowa.gui.toolbar.show_search__key_box' value='xowa.gui.toolbar.show_search'> <input type='hidden' id='xowa.gui.toolbar.show_search__ctx_box' value='app'>
+          <input type='hidden' id='xowa.gui.browser.toolbar.show_search__key_box' value='xowa.gui.browser.toolbar.show_search'> <input type='hidden' id='xowa.gui.browser.toolbar.show_search__ctx_box' value='app'>
         </div><!-- DIV:help -->
-        <div id='xowa.gui.toolbar.show_search_help_div' class='xohelp_div'>
-          <div id='xowa.gui.toolbar.show_search_help_msg' class='xohelp_msg'>
+        <div id='xowa.gui.browser.toolbar.show_search_help_div' class='xohelp_div'>
+          <div id='xowa.gui.browser.toolbar.show_search_help_msg' class='xohelp_msg'>
             <p>
               Choose one of the following
             </p>
@@ -1648,21 +1654,21 @@
         <div class="xocfg_row flex_div">
           <!-- BTN:help_item -->
           <div class='xocfg_itm_help'>
-            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.toolbar.show_allpages")' title='view more info'>&nbsp;</span>
+            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.browser.toolbar.show_allpages")' title='view more info'>&nbsp;</span>
           </div><!-- TEXT:key -->
-          <div id='xowa.gui.toolbar.show_allpages__name' class='xocfg_itm_name'>
+          <div id='xowa.gui.browser.toolbar.show_allpages__name' class='xocfg_itm_name'>
             Show all pages
           </div><!-- BTN:undo -->
-          <div id='xowa.gui.toolbar.show_allpages__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
-            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.toolbar.show_allpages")' title="reset to &quot;y&quot;">&nbsp;</span>
+          <div id='xowa.gui.browser.toolbar.show_allpages__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
+            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.browser.toolbar.show_allpages")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.gui.toolbar.show_allpages" data-xocfg-key="xowa.gui.toolbar.show_allpages" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
+            <input id="xowa.gui.browser.toolbar.show_allpages" data-xocfg-key="xowa.gui.browser.toolbar.show_allpages" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
           </div><!-- HIDDEN:key,ctx -->
-          <input type='hidden' id='xowa.gui.toolbar.show_allpages__key_box' value='xowa.gui.toolbar.show_allpages'> <input type='hidden' id='xowa.gui.toolbar.show_allpages__ctx_box' value='app'>
+          <input type='hidden' id='xowa.gui.browser.toolbar.show_allpages__key_box' value='xowa.gui.browser.toolbar.show_allpages'> <input type='hidden' id='xowa.gui.browser.toolbar.show_allpages__ctx_box' value='app'>
         </div><!-- DIV:help -->
-        <div id='xowa.gui.toolbar.show_allpages_help_div' class='xohelp_div'>
-          <div id='xowa.gui.toolbar.show_allpages_help_msg' class='xohelp_msg'>
+        <div id='xowa.gui.browser.toolbar.show_allpages_help_div' class='xohelp_div'>
+          <div id='xowa.gui.browser.toolbar.show_allpages_help_msg' class='xohelp_msg'>
             <p>
               Choose one of the following
             </p>
